feat: add custom components like AddToCart and custom some styles

--- a/customizations/customs/checkout/header.html
+++ b/customizations/customs/checkout/header.html
@@ -4,6 +4,6 @@
           <a href="/" title="add more products" class="buy-more-link link">Continue shopping</a>
           <a href="/checkout/#/cart" title="back to cart" class="back-cart-link link">Back to Cart</a>
         </div>
-      <a href="/" title="Go to homepage" class="logo"><img src="/arquivos/Cemento-SOL.jpg" width="200px" height="100px"></a>
+      <a href="/" title="Go to homepage" class="logo"><img src="/assets/img/carulla_colombia.png" width="200px" height="100px"></a>
     </div>
   </header>
